# smon

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: generate_screenshot.py
src/: fake_slurm_fixtures.py  main.py  slurm_backend.py  smon_clipboard.py  smon_config.py  smon_dashboard.py  smon_screens.py
